# QtWebDAV

./: CMakeLists.txt  QtWebDAVConfig.cmake.in  README.md  qnaturalsort.h  qwebdav.h  qwebdavdirparser.cpp  qwebdavdirparser.h  qwebdavitem.h
.github/workflows/: build.yml
